Mejora de swagger- implementación de model review, para relaciones
